<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/home_button"
            android:icon="@drawable/ic_baseline_home_24px"
            android:title="@string/title_home_icon"
            app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/work_place"
        android:icon="@drawable/ic_baseline_business_center_24px"
        android:title="@string/title_workplace_icon"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/current_location"
        android:icon="@drawable/ic_baseline_location_on_24px"
        android:title="@string/title_current_location_icon"
        app:showAsAction="ifRoom">
    </item>
</menu>