<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent" android:id="@+id/aboutAppLayout"
                                             android:gravity="center"
                                             android:background="@color/trans">

    <TextView
            android:text="@string/aboutAppTextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/aboutAppTitleTextView" android:textSize="30sp"
            android:textStyle="bold|italic" android:textAlignment="center" android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/welcomeTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="36sp" android:textStyle="bold|italic" android:text="@string/welcomeText"
            android:textColor="@color/colorAccent" app:layout_constraintTop_toBottomOf="@+id/aboutAppTitleTextView"
            android:layout_marginTop="32dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24px"
            android:id="@+id/arrowForwardAppImage"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:foregroundTint="@color/colorAccent"
            android:backgroundTint="@color/colorAccent"/>
    <TextView
            android:text="@string/aboutAppText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/aboutAppText"
            app:layout_constraintTop_toBottomOf="@+id/welcomeTextView" android:layout_marginTop="64dp"
            app:layout_constraintEnd_toStartOf="@+id/arrowForwardAppImage" android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp" android:textSize="24sp"
            android:textColor="@color/colorWhite"/>

</android.support.constraint.ConstraintLayout>