<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent" android:id="@+id/aboutMeLayout"
                                             android:background="@color/trans"
                                             android:gravity="center">

    <TextView
            android:text="@string/aboutMeTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/aboutAppTitleTextView" android:textSize="30sp"
            android:textStyle="bold|italic" android:textAlignment="center" android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.49"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24px"
            android:id="@+id/arrowBackMeImage" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24px"
            android:id="@+id/arrowForwardMeImage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/my_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/myNameTextView"
            app:layout_constraintTop_toBottomOf="@+id/aboutAppTitleTextView"
            app:layout_constraintStart_toStartOf="@+id/aboutAppTitleTextView"
            app:layout_constraintEnd_toEndOf="@+id/aboutAppTitleTextView" android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp" app:layout_constraintHorizontal_bias="0.511" android:textSize="36sp"
            android:layout_marginStart="8dp" android:textStyle="bold|italic" android:textAlignment="center"
            android:textColor="@color/colorAccent"/>
    <TextView
            android:text="@string/about_me_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/aboutMeText" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/myNameTextView"
            app:layout_constraintStart_toEndOf="@+id/arrowBackMeImage"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/arrowForwardMeImage"
            android:layout_marginEnd="8dp" android:textSize="24sp" app:layout_constraintHorizontal_bias="0.466"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/colorWhite"/>
</android.support.constraint.ConstraintLayout>