<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent" android:id="@+id/aboutMentorLayout"
                                             android:background="@color/trans"
                                             android:gravity="center">

    <TextView
            android:text="@string/aboutMentorTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/aboutAppTitleTextView" android:textSize="30sp"
            android:textStyle="bold|italic" android:textAlignment="center" android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.023"/>
    <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp" app:srcCompat="@android:drawable/ic_delete"
            android:id="@+id/cancelImage"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24px"
            android:id="@+id/backArrowMentorImage"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/about_mentor_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/aboutMentorNameTextView"
            app:layout_constraintTop_toBottomOf="@+id/aboutAppTitleTextView" android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/aboutAppTitleTextView"
            app:layout_constraintStart_toStartOf="@+id/aboutAppTitleTextView" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" android:textSize="36sp" android:textColor="@color/colorAccent"
            android:textStyle="bold|italic" android:textAlignment="center"/>
    <TextView
            android:text="@string/about_mentor_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/aboutMentorTextView" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/aboutMentorNameTextView"
            app:layout_constraintStart_toEndOf="@+id/backArrowMentorImage" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:textSize="24sp"
            android:textColor="@color/colorWhite" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/cancelImage"/>
</android.support.constraint.ConstraintLayout>